--- a/css/base.css
+++ b/css/base.css
@@ -46,9 +46,6 @@ main {
 .w3-hover-text-theme-dark:hover {color:#0069a7 !important}
 .w3-hover-border-theme-dark:hover {border-color:#0069a7 !important}
 
-h1.pageHeader {
-	font-size: 32px;
-}
-h2.sectionHeader {
-	font-size: 32px;
+.sectionHeader {
+	font-size: 36px;
 }
